fixed map on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -66,7 +66,7 @@ a {
 }
 
 #business, #education, #contact {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     padding: 10vh 5vh 0;
     box-sizing: border-box;
@@ -84,7 +84,6 @@ a {
 }
 
 #business {
-    width: 100vw;
     grid-template-columns: 25% 50% calc(25% - 5vw);
     grid-template-rows: 40% 50% 10%;
     grid-column-gap: 2.5vw;
@@ -121,6 +120,7 @@ a {
     border-radius: 5px;
     width: 100%;
     font-family: Raleway;
+    font-size: 1em;
 }
 
 #contact textarea {
@@ -157,7 +157,6 @@ svg {
 /* special cursor */
 @media screen and (min-width: 992px) {
     .cursor {
-        visibility: hidden;
         position: absolute;
         margin-top: calc(10px / -2);
         margin-left: calc(10px / -2);
@@ -197,4 +196,5 @@ svg {
 /* leaflet */
 #map {
     height: 50vh;
+    width: 100%;
 }
