--- a/styles/scroll.css
+++ b/styles/scroll.css
@@ -2,7 +2,7 @@
 
 section {
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 
